--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node api/send-email.js"
   },
   "dependencies": {
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "dotenv": "^10.0.0"
   }
 }
